date display fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ li {
   padding: 20px;
   border-radius: 25px;
   position: relative;
-  background-color: #eee;
+  background-color: #fbfbfb;
   color: #424242;
 }
 
@@ -204,9 +204,9 @@ li {
 img{ width: 100%;}
 
 .weather-icon{
-  right: 15%;
-  top: 25px;
-  width: 20%;
+  right: 11%;
+  top: 12px;
+  width: 30%;
 }
 
 /*=================================
